--- a/build.gradle
+++ b/build.gradle
@@ -13,6 +13,7 @@ repositories {
 
 dependencies {
     testCompile group: 'junit', name: 'junit', version: '4.11'
+    compile 'commons-dbcp:commons-dbcp:1.4'
     compile group: 'log4j', name: 'log4j', version: '1.2.17'
     compile fileTree(dir: 'lib', include: '*.jar')
     compile 'org.springframework:spring-beans:4.3.6.RELEASE'
