--- a/build.gradle
+++ b/build.gradle
@@ -18,6 +18,8 @@ dependencies {
     compile fileTree(dir: 'lib', include: '*.jar')
     compile 'org.springframework:spring-beans:4.3.6.RELEASE'
     compile 'org.springframework:spring-jdbc:4.3.6.RELEASE'
+    compile group: 'org.apache.commons', name: 'commons-math3', version: '3.6.1'
+
 }
 startScripts {
     applicationName=myAppName
