--- a/build.gradle
+++ b/build.gradle
@@ -1,42 +1,61 @@
-group 'PhenominerExpectedRanges'
-version '1.0-SNAPSHOT'
-
+// create a runnable jar with jar dependencies stored in lib subdirectory
+tasks.whenTaskAdded { task ->
+    ['startScripts', 'distTar'].each { String skipTaskName ->
+        if (task.name.contains(skipTaskName)) {
+            task.enabled = false
+        }
+    }
+}
 apply plugin: 'java'
 apply plugin: 'application'
+
+// JDK 8
+sourceCompatibility = 1.8
+targetCompatibility = 1.8
 mainClassName="edu.mcw.rgd.phenominerExpectedRanges.Manager"
 String myAppName="PhenominerExpectedRanges"
-sourceCompatibility = 1.8
+
+project.archivesBaseName = myAppName
 
 repositories {
     mavenCentral()
 }
 
 dependencies {
-    testCompile group: 'junit', name: 'junit', version: '4.11'
+    testCompile 'junit:junit:4.11'
     compile 'commons-dbcp:commons-dbcp:1.4'
-    compile group: 'log4j', name: 'log4j', version: '1.2.17'
-    compile fileTree(dir: 'lib', include: '*.jar')
+    compile 'org.apache.logging.log4j:log4j-api:2.17.1'
+    compile 'org.apache.logging.log4j:log4j-core:2.17.1'
     compile 'org.springframework:spring-beans:4.3.6.RELEASE'
     compile 'org.springframework:spring-jdbc:4.3.6.RELEASE'
-    compile group: 'org.apache.commons', name: 'commons-math3', version: '3.6.1'
+    compile 'org.apache.commons:commons-math3:3.6.1'
 
-}
-startScripts {
-    applicationName=myAppName
+    compile fileTree(dir: 'lib', include: '*.jar')
 }
 
 jar {
-    baseName=myAppName
-    manifest{
+    manifest {
         attributes(
                 'Built-By': System.getProperty('user.name'),
                 'Built-Date': new Date(),
-                'Built-JDK': System.getProperty('java.version')
+                'Built-JDK': System.getProperty('java.version'),
+                'Class-Path': configurations.compile.collect { it.getName() }.join(' '),
+                'Main-Class': mainClassName
         )
     }
 }
+
 distributions {
     main {
         baseName = myAppName
     }
 }
+
+task createDistro(type: Copy) {
+    def zipFile = file('build/distributions/'+myAppName+'.zip')
+    def outputDir = file("build/install")
+
+    from zipTree(zipFile)
+    into outputDir
+}
+createDistro.dependsOn assembleDist
