--- a/build.gradle
+++ b/build.gradle
@@ -24,11 +24,15 @@ repositories {
 dependencies {
     testCompile 'junit:junit:4.11'
     compile 'commons-dbcp:commons-dbcp:1.4'
-    compile 'org.apache.logging.log4j:log4j-api:2.17.1'
-    compile 'org.apache.logging.log4j:log4j-core:2.17.1'
+    compile 'org.apache.commons:commons-lang3:3.8'
+    compile 'org.apache.commons:commons-math3:3.6.1'
+    compile 'commons-pool:commons-pool:1.6'
+    compile 'org.apache.logging.log4j:log4j-api:2.17.2'
+    compile 'org.apache.logging.log4j:log4j-core:2.17.2'
+    compile 'com.oracle.database.jdbc:ojdbc8:19.7.0.0'
+    compile 'org.apache.poi:poi:3.15'
     compile 'org.springframework:spring-beans:4.3.6.RELEASE'
     compile 'org.springframework:spring-jdbc:4.3.6.RELEASE'
-    compile 'org.apache.commons:commons-math3:3.6.1'
 
     compile fileTree(dir: 'lib', include: '*.jar')
 }
