--- a/build.gradle
+++ b/build.gradle
@@ -10,8 +10,10 @@ apply plugin: 'java'
 apply plugin: 'application'
 
 // JDK 8
-sourceCompatibility = 1.8
-targetCompatibility = 1.8
+java {
+    sourceCompatibility = JavaVersion.VERSION_17
+    targetCompatibility = JavaVersion.VERSION_17
+}
 mainClassName="edu.mcw.rgd.phenominerExpectedRanges.Manager"
 String myAppName="PhenominerExpectedRanges"
 
@@ -22,19 +24,19 @@ repositories {
 }
 
 dependencies {
-    testCompile 'junit:junit:4.11'
-    compile 'commons-dbcp:commons-dbcp:1.4'
-    compile 'org.apache.commons:commons-lang3:3.8'
-    compile 'org.apache.commons:commons-math3:3.6.1'
-    compile 'commons-pool:commons-pool:1.6'
-    compile 'org.apache.logging.log4j:log4j-api:2.18.0'
-    compile 'org.apache.logging.log4j:log4j-core:2.18.0'
-    compile 'com.oracle.database.jdbc:ojdbc8:21.1.0.0'
-    compile 'org.apache.poi:poi:3.16'
-    compile 'org.springframework:spring-beans:5.0.20.RELEASE'
-    compile 'org.springframework:spring-jdbc:5.0.20.RELEASE'
+    testImplementation 'junit:junit:4.11'
+    implementation 'commons-dbcp:commons-dbcp:1.4'
+    implementation 'org.apache.commons:commons-lang3:3.8'
+    implementation 'org.apache.commons:commons-math3:3.6.1'
+    implementation 'commons-pool:commons-pool:1.6'
+    implementation 'org.apache.logging.log4j:log4j-api:2.18.0'
+    implementation 'org.apache.logging.log4j:log4j-core:2.18.0'
+    implementation 'com.oracle.database.jdbc:ojdbc8:21.1.0.0'
+    implementation 'org.apache.poi:poi:3.16'
+    implementation 'org.springframework:spring-beans:5.0.20.RELEASE'
+    implementation 'org.springframework:spring-jdbc:5.0.20.RELEASE'
 
-    compile fileTree(dir: 'lib', include: '*.jar')
+    implementation fileTree(dir: 'lib', include: '*.jar')
 }
 
 jar {
@@ -43,7 +45,7 @@ jar {
                 'Built-By': System.getProperty('user.name'),
                 'Built-Date': new Date(),
                 'Built-JDK': System.getProperty('java.version'),
-                'Class-Path': configurations.compile.collect { it.getName() }.join(' '),
+                'Class-Path': configurations.runtimeClasspath.collect { it.getName() }.join(' '),
                 'Main-Class': mainClassName
         )
     }
@@ -51,7 +53,7 @@ jar {
 
 distributions {
     main {
-        baseName = myAppName
+        distributionBaseName = myAppName
     }
 }
 
