--- a/build.gradle
+++ b/build.gradle
@@ -24,17 +24,15 @@ repositories {
 }
 
 dependencies {
-    testImplementation 'junit:junit:4.13.1'
-    implementation group: 'org.apache.commons', name: 'commons-dbcp2', version: '2.9.0'
-    implementation 'org.apache.commons:commons-lang3:3.18.0'
+    implementation ('org.apache.commons:commons-dbcp2:2.12.0') {
+        exclude group: 'commons-logging', module: 'commons-logging'
+    }
+    //implementation 'org.apache.commons:commons-lang3:3.18.0'
     implementation 'org.apache.commons:commons-math3:3.6.1'
-    implementation 'org.apache.logging.log4j:log4j-api:2.18.0'
-    implementation 'org.apache.logging.log4j:log4j-core:2.18.0'
-    implementation 'com.oracle.database.jdbc:ojdbc11:23.2.0.0'
-    implementation 'org.apache.poi:poi:4.1.1'
-    implementation group: 'org.springframework', name: 'spring-beans', version: '6.1.1'
-    implementation group: 'org.springframework', name: 'spring-jdbc', version: '6.1.1'
-
+    implementation 'org.apache.logging.log4j:log4j-core:2.24.0'
+    implementation 'com.oracle.database.jdbc:ojdbc11:23.7.0.25.01'
+    //implementation 'org.apache.poi:poi:4.1.1'
+    implementation 'org.springframework:spring-jdbc:6.2.0'
 
     implementation fileTree(dir: 'lib', include: '*.jar')
 }
